# InnerVerse

./: .dockerignore  .env.example  .gitignore  .replit  ALL_FIXES_COMPLETE.md  BATCH_REPROCESS_GUIDE.md  BUG_FIX_REPORT.md  CHATGPT_ACTION_SCHEMA.json  CHAT_REFACTOR_PLAN.md  CITATIONS_PERSISTENCE_COMPLETE.md  CLAUDE_PROJECT_INSTRUCTIONS.md  CLAUDE_WRITE_TEST.md  COMPREHENSIVE_FIX_GUIDE.md  CONTRIBUTING.md  CORRECTED_IMPLEMENTATION_GUIDE.md  CRITICAL_ISSUE_FOUND.md  CUSTOM_GPT_INSTRUCTIONS.md  CUSTOM_GPT_INSTRUCTIONS_CONDENSED.md  CUSTOM_GPT_INSTRUCTIONS_MERGED.md  DEBUG_CHECKLIST.md  DELETE_VERIFICATION_REPORT.md  DEPLOY_INSTRUCTIONS.md  DEVELOPMENT_CHANGELOG.md  Dockerfile  ENTERPRISE_FIX_APPLIED.md  ENTERPRISE_TAGGING_BUG_INVESTIGATION.md  ENTERPRISE_TAGGING_FIX.md  ENTERPRISE_V2_BUG_FIXES.md  FACTUAL_VERIFICATION_CITATIONS_WIRING.md  FACTUAL_VERIFICATION_QUERY_EXPANSION.md  FEATURE5_RERANKING_VERIFICATION.md  FIX_SUMMARY.md  FUTURE_FEATURES.md  INNERVERSE_PAGE_ANALYSIS.md  LIBRECHAT_SETUP_GUIDE.md  LOCAL_SETUP_GUIDE.md  MIGRATION_CHECKLIST.md  NEXT_STEPS.md  PHASE1_IMPROVEMENTS_SUMMARY.md  PHASE2_INTEGRATION.md  (+87 more)
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
attached_assets/: COMPLETE_CURRICULUM_742_LESSONS_1763208490859.sql  Idealist__1765382077361.jsonl  Optimistic_Or_Pessimistic_Are_The_Cognitive_Functions__1765387993573.jsonl  PHASE_7_3_PART_1_DATABASE_BACKEND_HTML_1763198197961.md  PHASE_7_3_PART_2_CSS_STYLING_1763198197963.md  PHASE_7_3_PART_3_JAVASCRIPT_TESTING_1763198197964.md  Pasted--BUG-1-INPUT-BAR-POSITIONING-SURGICAL-FIX-Issue-Input-bar-jumps-around-when-keyboard-open-1763450639296_1763450639296.txt  Pasted--BULLETPROOF-SCROLL-FIX-THE-PROBLEM-We-ve-tried-multiple-approaches-and-scroll-still-doesn-1763786998768_1763786998769.txt  Pasted--CHAT-UX-IMPROVEMENTS-MAKE-IT-FEEL-LIKE-CHATGPT-Goal-Fix-chat-experience-to-be-instant--1763251067607_1763251067607.txt  Pasted--COMPLETE-BACKEND-OVERHAUL-PROFESSIONAL-GRADE-Alright-let-s-build-this-RIGHT-No-half-measur-1763663754420_1763663754420.txt  Pasted--CORRECTED-PATCH-Fix-3-Bugs-in-Current-Implementation-OVERVIEW-The-current-implementation-has-1763751972338_1763751972338.txt  Pasted--CRITICAL-BUG-FIX-LESSON-CHAT-FOUR-S-1762929254531_1762929254532.txt  Pasted--CRITICAL-BUG-FIX-O-1763010252174_1763010252175.txt  Pasted--CRITICAL-BUG-FIX-VIEW-COURSE-BUTT-1762930137351_1762930137351.txt  Pasted--CRITICAL-FIX-User-Message-Scroll-to-Top-THE-ROOT-CAUSE-messages-is-missing-positio-1763785765856_1763785765856.txt  Pasted--CRITICAL-Function-Position-Precision-THIS-IS-NON-NEGOTIABLE-Function-positions-determine-b-1763568167758_1763568167758.txt  Pasted--Chat-Routes-API-endpoints-for-lesson-chat-from-fastapi-import-APIRouter-HTTPException-De-1762490107014_1762490107015.txt  Pasted--Chat-Service-Handles-lesson-aware-AI-tutoring-import-os-import-json-import-anthropic-from--1762490071547_1762490071547.txt  Pasted--DEBUG-OK-BUTTON-STI-1763013015784_1763013015785.txt  Pasted--EMPTY-CHAT-WELCOME-MESSAGE-Surgical-Patch-Problem-New-chat-shows-completely-blank-page--1763518787060_1763518787061.txt  Pasted--EXACT-REPLACEMENT-CODE-REMOVE-AXIS-ADD-STREAMING-CRITICAL-Copy-paste-EXACTLY-Change-N-1763347270766_1763347270766.txt  Pasted--EXCELLENT-AUDIT-You-caught-critical-issues-before-production-Here-s-the-complete-fix-plan--1762629008093_1762629008094.txt  Pasted--FINAL-FIXES-Button-Visibility-Message-Position-Issue-1-Button-Doesn-t-Hide-Root-cause--1763839731849_1763839731850.txt  (+157 more)
(+141 files in other folders)
