[project]
name = "innerverse"
version = "1.0.0"
description = "InnerVerse - AI-powered learning platform for MBTI and personality typology"
authors = [
    {name = "InnerVerse Team"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Web Framework
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.37.0",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.2",
    
    # Database
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    
    # AI & ML
    "openai>=2.3.0",
    "anthropic>=0.18.0",
    "langchain>=0.3.27",
    
    # Vector Database (pinecone replaces the old pinecone-client)
    "pinecone>=7.3.0",
    
    # Document Processing
    "PyPDF2>=3.0.1",
    "pdf2image>=1.16.3",
    "pillow>=10.2.0",
    "pytesseract>=0.3.10",
    
    # Media Processing
    "yt-dlp>=2024.3.10",
    "pydub>=0.25.1",
    "youtube-transcript-api>=0.6.2",
    
    # HTTP & Requests
    "httpx>=0.27.0",
    "requests>=2.32.5",
    
    # Security & Auth
    "fastapi-csrf-protect>=0.3.2",
    "pycryptodome>=3.20.0",
    "python-dotenv>=1.0.0",
    
    # Data & Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    
    # Utilities
    "pytz>=2024.1",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.25.0",
    
    # Reporting & PDFs
    "reportlab>=4.0.9",
    
    # Replit Integration (Object Storage for persistent data)
    "replit>=0.1.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx",  # for TestClient
    
    # Code Quality
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    
    # Security
    "bandit>=1.7.7",
    "safety>=3.0.0",
    
    # Type Stubs
    "types-requests",
    "types-pytz",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100
